--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^6.4.0",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.6",
     "pug": "^2.0.4"
   }
 }
